<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_homepage"
            android:icon="@drawable/ic_nav_homepage"
            android:title="@string/nav_homepage" />
        <item
            android:id="@+id/nav_deposit"
            android:icon="@drawable/ic_nav_deposit"
            android:title="@string/nav_deposit" />
        <item
            android:id="@+id/nav_account"
            android:title="@string/nav_account"
            android:icon="@drawable/ic_nav_account" />
        <item
            android:id="@+id/nav_map"
            android:icon="@drawable/ic_nav_map"
            android:title="@string/nav_map" />
        <item
            android:id="@+id/nav_scan"
            android:icon="@drawable/ic_nav_scan"
            android:title="@string/nav_scan" />
        <item
            android:id="@+id/nav_schedule"
            android:icon="@drawable/ic_nav_planning"
            android:title="@string/nav_schedule" />
        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/ic_nav_settings"
            android:title="@string/nav_settings" />
        <item
            android:id="@+id/nav_logout"
            android:icon="@drawable/ic_nav_logout"
            android:title="@string/nav_logout" />
    </group>

</menu>
