<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Connection.CGUActivity"
    android:orientation="vertical">

    <include layout="@layout/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/cgu"
        style="@style/TitleFontTheme"/>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="2"
        android:layout_margin="20dp">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/cguString" />
    </ScrollView>


    <Button
        android:id="@+id/cgu_activity_accept_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/ButtonTheme"
        android:text="@string/cguAccept"
        android:layout_margin="20dp"/>

</LinearLayout>