<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <include layout="@layout/app_bar_drawer" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/home_activity_button"
        android:text="test"/>

    <TextView
        android:id="@+id/home_activity_test"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Test"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/home_activity_depot_btn"
        style="@style/ButtonTheme"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:layout_marginTop="30dp"
        android:layout_marginBottom="20dp"
        android:text="@string/home_depot_button"
        android:textSize="20sp"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/home_infos_donations"
        android:gravity="center"/>

    <TextView
        android:id="@+id/home_activity_donations_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/home_donations"
        android:gravity="center"
        android:textSize="50sp"
        android:textColor="@color/secondaryColor"
        android:layout_marginBottom="20dp"/>

    <View
        style="@style/HorizontalSeparator"/>

    <android.support.v7.widget.RecyclerView
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/home_activity_recyclerView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginTop="10dp"/>

</LinearLayout>